--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "preview"]
 	path = preview
-	url = git@github.com:blacktunnel/morph.git
+  url = https://github.com/blacktunnel/morph.git
